# fmachine

./: Cargo.toml  README.md  TODO.md  install-prerequisites.sh  install.sh
etc/: fmachine.conf  fmachine.service
plans/: dip-switches.md  gen-svg.py  instructions.md  parts.md  requirements.txt  spec-numbers.md  using.md
src/: device.rs  evloop.rs  joystick.rs  main.rs  timeval.rs
tryevdev/: Cargo.toml
tryevdev/src/: main.rs
