[package]
name = "fmachine"
version = "0.1.0"
authors = ["paul"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
libc = "0.2.140"
rppal = "0.14.1"
signal-hook = "0.3.15"

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.clap]
version = "4.1.13"
features = ["derive"]

[dependencies.evdev-rs]
path = "../evdev-rs"

[dependencies.tokio]
version = "1.26.0"
features = ["macros", "net", "rt", "time", "sync"]
