[package]
name = "fmachine"
version = "0.1.0"
authors = ["Paul Crowley <git@paul.ciphergoth.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciphergoth/fmachine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
libc = "0.2.140"
rppal = "0.14.1"
signal-hook = "0.3.15"
toml = "0.7.3"

[dependencies.clap]
version = "4.1.13"
features = ["derive"]

[dependencies.evdev-rs]
git = "https://github.com/ndesh26/evdev-rs"
rev= "c288405aa06bb0875c6d78685828d2dae74f31c9"

[dependencies.log]
version = "0.4.17"
features = ["std"]

[dependencies.serde]
version = "1.0.160"
features = ["std", "alloc", "derive"]

[dependencies.tokio]
version = "1.26.0"
features = ["macros", "net", "rt", "time", "sync"]
